docs: add docummentation for deleteOpening
